--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint:check": "./node_modules/.bin/eslint './src'",
+    "lint:fix": "./node_modules/.bin/eslint --fix src/"
   },
   "eslintConfig": {
     "extends": [
